# recraft-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
go/: README.md  go.mod  go.sum
go/recraft/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  build.gradle.kts  settings.gradle.kts
java/runapi-recraft/: build.gradle.kts
java/runapi-recraft/src/main/java/ai/runapi/recraft/: RecraftClient.java
java/runapi-recraft/src/test/java/ai/runapi/recraft/: RecraftClientTest.java  RecraftLiveApiSmokeTest.java  RecraftLocalApiSmokeTest.java
js/: README.md  package.json
js/skills/recraft/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: background-removals.ts  remove-background.ts  upscale-image.ts  upscales.ts
js/tests/unit/: background-removals.test.ts  client.test.ts  upscales.test.ts
python/: README.md  pyproject.toml
python/src/runapi/recraft/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/recraft/resources/: __init__.py  remove_background.py  upscale_image.py
python/tests/: test_client.py
ruby/: README.md  runapi-recraft.gemspec
ruby/lib/: runapi-recraft.rb
ruby/lib/runapi/: recraft.rb
ruby/lib/runapi/recraft/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/recraft/resources/: background_removals.rb  remove_background.rb  upscale_image.rb  upscales.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/recraft/: client_spec.rb
ruby/spec/runapi/recraft/resources/: remove_background_spec.rb  upscale_image_spec.rb
(+18 files in other folders)
