[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-recraft"
version = "0.2.0"
description = "RunAPI Recraft SDK for background removal and image upscale workflows in JavaScript, Python, Ruby, Go, Java, and PHP"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "runapi-ai", "recraft", "api", "sdk", "typescript", "python", "ruby", "golang", "java", "maven", "gradle", "image-generation", "text-to-image", "image-api", "recraft-api"]
dependencies = ["runapi-core>=0.3.0"]

[project.urls]
Homepage = "https://runapi.ai/models/recraft"
Documentation = "https://runapi.ai/docs#sdk-recraft"
Source = "https://github.com/runapi-ai/recraft-sdk"
Issues = "https://github.com/runapi-ai/recraft-sdk/issues"
Changelog = "https://github.com/runapi-ai/recraft-sdk/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/runapi-ai/recraft-sdk/releases/tag/python%2Fv0.2.0"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "recraft"
